<resources>
    <string name="app_name">Libground</string>

    <string name="glide">Glide</string>
    <string name="implementation">Implementation</string>
    <string name="contributor_name">Contributor Name</string>
    <string name="github_id">Github ID</string>
    <string name="linkedin_id">LinkedIn ID</string>
    <string name="about_acm_vit_fragment">About ACM-VIT Fragment</string>
    <string name="about_us">About Us</string>
    <string name="contributors">Contributors</string>
    <string name="libraries">Libraries</string>
    <string name="libraries_fragment">Libraries Fragment</string>
    <string name="glide_support_detail">Glide supports fetching, decoding, and displaying video stills, images, and animated GIFs. It\'s primary focus is on making scrolling any kind of a list of images as smooth and fast as possible</string>
    <string name="glide_sample">Here is an example which depicts the usage of Glide for fetching and displaying the images from the Internet</string>
    <string name="about_us_detail">ACM-VIT, one of the most reputed and distinguished technical chapter in VIT, Vellore has been working with vision and determination since it’s inception in 2009, with the aspirations of advancement of computer science as a science and a profession. We are not just an organization, we are a family, united by one cause, working towards making technology more accessible much like our parent organization, ACM.\n\nACM-VIT has been working on projects related to graphic designing, web development, machine learning and app development and has been organizing events and workshop for the same. Apart from this, ACM-VIT also boasts of its own research wing, the only chapter in VIT to have that.\n\nTechnology is their cause, objective, vision and mission. Ask why? Look at our motto, “Because Technology Matters”.</string>
    <string name="url_acmvit_instagram">https://www.instagram.com/acmvit/</string>
    <string name="url_acmvit_facebook">https://www.facebook.com/ACM.VITU</string>
    <string name="url_acmvit_twitter">https://twitter.com/ACM_VIT</string>
    <string name="url_acmvit_linkedin">https://www.linkedin.com/company/acm-vit/</string>
    <string name="glide_image_url">https://i.pcmag.com/imagery/lineups/01peUn6ncZ6gL0dEpO6rsW0-1.1569492716.fit_lim.size_1200x630.jpg</string>

    <!-- Shimmer -->
    <string name="shimmer_title">Shimmer</string>
    <string name="shimmer_about">
        Shimmer is an Android library that provides an easy way to add a shimmer effect to any view in your Android app. It is useful as an unobtrusive loading indicator that was originally developed for Facebook Home.
    </string>
    <string name="shimmer_implementation">
        Shimmer for Android is implemented as a layout, which means that you can simply nest any view inside a ShimmerFrameLayout tag, and call to start the animation from your code. That\'s all that is required. The layout will use the values you specify either on the tag (using custom attributes) or programmatically in your code, and generate an animation on the fly.
    </string>

    <!-- Lottie -->
    <string name="lottie_title">Lottie</string>
    <string name="lottie_support_detail">Lottie is a mobile library for Android and iOS that parses Adobe After Effects animations exported as json with Bodymovin and renders them natively on mobile. With Lottie, designers can create and ship beautiful animations without an engineer painstakingly recreating it by hand.</string>
    <string name="lottie_implementation">Here is example the usage of lottie animation with json. Just put LottieAnimationView in xml and declare the json file, lottie animation is ready to show! \nLottie animation source: https://lottiefiles.com/35139-claping-animation</string>

    <!-- Retrofit -->
    <string name="retrofit_title">Retrofit</string>
    <string name="retrofit_about">Retrofit is a type-safe REST client for Android, Java and Kotlin developed by Square. The library provides a powerful framework for authenticating and interacting with APIs and sending network requests with OkHttp.</string>
    <string name="retrofit_implementation">Here is example of network request to get data from <b>api.quotable.io</b>. Retrofit library makes downloading JSON or XML data from a web API fairly straightforward. Once the data is downloaded then it is parsed into a Plain Old Java Object (POJO) which must be defined for each "resource" in the response.</string>

    <!-- Fast Android Networking -->
    <string name="fan_title">Fast Android Networking</string>
    <string name="fan_about">Fast Android Networking Library is a powerful library for doing any type of networking in Android applications which is made on top of OkHttp Networking Layer. Fast Android Networking Library takes care of each and everything. So you don\'t have to do anything, just make request and listen for the response.</string>
    <string name="fan_implementation">Here is example of network request to get data from <b>api.quotable.io</b>. FAN library will handle the request and give us a response with multiple options. There are JSONArray, JSONObject, Parsed Object, Parsed Object List. In this case, we use JSONObject as a response.</string>

    <!-- Exo Player-->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="exo_title">ExoPlayer</string>
    <string name="exo_about">ExoPlayer is an application level media player for Android. It provides an alternative to Android’s MediaPlayer API for playing audio and video both locally and over the Internet.</string>
    <string name="exo_implementation">Here is an example of the usage of ExoPlayer with video from internet.</string>

    <!-- Biometric Prompt -->
    <string name="biometric_title">Biometric Prompt</string>
    <string name="biometric_about">Biometric authentication is an extension of fingerprint authentication. A biometric API is far more advanced and straightforward to integrate when compared to its predecessor.</string>
    <string name="biometric_implementation">Here is an example of the usage of Biometric Prompt using Fingerprint sensor.</string>
    <string name="biometric_available">You can use the fingerprint sensor</string>
    <string name="biometric_no_hardware">Your device don\'t have fingerprint sensor</string>
    <string name="biometric_unavailable">The fingerprint sensor is currently unavailable</string>
    <string name="biometric_none_enrolled">Your device don\'t have any fingerprint saved, please check your security settings</string>
    <string name="biometric_button_title">Open Biometric Dialog</string>
</resources>