<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimaryDark"
        tools:context=".BiometricActivity">

        <TextView
            android:id="@+id/biometric_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/biometric_title"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/biometric_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/biometric_about"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biometric_header" />

        <TextView
            android:id="@+id/biometric_implementation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="38dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/implementation"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biometric_about" />

        <TextView
            android:id="@+id/biometric_implementation_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/biometric_implementation"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biometric_implementation_header" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biometric_implementation_details"
            tools:text="@string/biometric_available" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_biometric"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/biometric_button_title"
            android:textColor="@color/colorPrimaryDark"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_fingerprint"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>