<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_auto_start="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            tools:context=".ShimmerActivity">

            <TextView
                android:id="@+id/shimmer_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:layout_marginLeft="24dp"
                android:fontFamily="@font/cerebri_sans_bold"
                android:text="@string/shimmer_title"
                android:textColor="@color/colorAccent"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shimmer_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/cerebri_sans_regular"
                android:text="@string/shimmer_about"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_header" />

            <TextView
                android:id="@+id/shimmer_implementation_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="38dp"
                android:layout_marginLeft="24dp"
                android:fontFamily="@font/cerebri_sans_bold"
                android:text="@string/implementation"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_about" />

            <TextView
                android:id="@+id/shimmer_implementation_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/cerebri_sans_regular"
                android:text="@string/shimmer_implementation"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_implementation_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.core.widget.NestedScrollView>