<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".LottieActivity">

        <TextView
            android:id="@+id/lottie_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/lottie_title"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lottie_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/lottie_support_detail"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_header" />

        <TextView
            android:id="@+id/lottie_implementation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="38dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/implementation"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_about" />

        <TextView
            android:id="@+id/lottie_implementation_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/lottie_implementation"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_implementation_header" />


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_implementation_details"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/claping_hands" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>