<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimaryDark"
        tools:context=".retrofit.RetrofitActivity">

        <TextView
            android:id="@+id/retrofit_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/retrofit_title"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/retrofit_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/retrofit_about"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retrofit_header" />

        <TextView
            android:id="@+id/retrofit_implementation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="38dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:text="@string/implementation"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retrofit_about" />

        <TextView
            android:id="@+id/retrofit_implementation_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:text="@string/retrofit_implementation"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retrofit_implementation_header" />

        <TextView
            android:id="@+id/retrofit_quotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cerebri_sans_regular"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retrofit_implementation_details"
            tools:text="I'm convinced that about half of what separates the successful entrepreneurs from the non-successful ones is pure perseverance. It is so hard." />

        <TextView
            android:id="@+id/retrofit_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cerebri_sans_bold"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/retrofit_quotes"
            app:layout_constraintStart_toStartOf="@+id/retrofit_quotes"
            app:layout_constraintTop_toBottomOf="@+id/retrofit_quotes"
            tools:text="Steve Jobs" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/retrofit_author"
            app:layout_constraintEnd_toEndOf="@+id/retrofit_quotes"
            app:layout_constraintStart_toStartOf="@+id/retrofit_quotes"
            app:layout_constraintTop_toTopOf="@+id/retrofit_quotes" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>